--- a/bjt.html
+++ b/bjt.html
@@ -9,7 +9,7 @@
 		#quiz_div{width:100%;background-color:#333;}
 		td{font-size:20pt}
 		th,td,table{border:1px solid black;}
-		table{width:100%;height:100%}
+		#bjt {width:100%;height:100%}
 		td{text-align:center;vertical-align:middle;color:antiquewhite;}
 		.toprow{background-color:#444}
 		.leftcol{background-color:#444}
@@ -27,12 +27,15 @@
 			height: 100%; /* Full height */
 			overflow: auto; /* Enable scroll if needed */
 			background-color: rgb(0,0,0); /* Fallback color */
-			background-color: rgba(0,0,0,0.5); /* Black w/ opacity */
+			background-color: rgba(0,0,0); /* Black w/ opacity */
 			color:white;
 			font-size:20pt;
 		}
 		.bj_quiz {
 			width:100%;height:400px;background-color:drakgreen;
+		}
+		.bj_stats {
+
 		}
 		.animate {
 			-webkit-animation: animatezoom 0.6s;
@@ -58,6 +61,13 @@
 			position: fixed;
 			bottom: 40px;
 			right: 30px;
+			background-color: #247724;
+			color:white;
+		}
+		#opacityB {
+			position: fixed;
+			bottom: 40px;
+			right: 46%;
 			background-color: #247724;
 			color:white;
 		}
@@ -135,6 +145,7 @@ html+="</center>";
 document.getElementById("strategy_div").innerHTML=html;
 
 var bjq=BlackJackQuiz("#bjt");
+document.getElementById('snapshot_popup').style.display="block";
 
 </script>
 </body>
