now maintains and replays wrong hands based on rand>0.5

--- a/bjt.html
+++ b/bjt.html
@@ -68,8 +68,9 @@
 			position: fixed;
 			bottom: 40px;
 			right: 46%;
-			background-color: #247724;
+			background-color: #555;
 			color:white;
+			border-radius:4px;
 		}
 		#nextB {
 			background-color: #247724;
