--- a/bjt.html
+++ b/bjt.html
@@ -116,6 +116,7 @@ const rcvals=[
 	['<img src="img_card/'+cshd_idcs[13]+'.png"><img src="img_card/'+cshd_idcs[13]+'.png">','SP','SP','SP','SP','SP','SP','SP','SP','SP','SP',],
 	['<img src="img_card/'+cshd_idcs[1]+'.png"><img src="img_card/'+cshd_idcs[1]+'.png">','H','SP','SP','SP','SP','SP','H','H','H','H',],
 	['<img src="img_card/'+cshd_idcs[2]+'.png"><img src="img_card/'+cshd_idcs[2]+'.png">','H','H','SP','SP','SP','SP','H','H','H','H',],
+	['<img src="img_card/'+cshd_idcs[3]+'.png"><img src="img_card/'+cshd_idcs[3]+'.png">','H','H','H','SP','D','H','H','H','H','H',],
 	['<img src="img_card/'+cshd_idcs[5]+'.png"><img src="img_card/'+cshd_idcs[5]+'.png">','SP','SP','SP','SP','SP','H','H','H','H','H',],
 	['<img src="img_card/'+cshd_idcs[6]+'.png"><img src="img_card/'+cshd_idcs[6]+'.png">','SP','SP','SP','SP','SP','SP','H','H','SP','H',],
 	['<img src="img_card/'+cshd_idcs[7]+'.png"><img src="img_card/'+cshd_idcs[7]+'.png">','SP','SP','SP','SP','SP','SP','SP','SP','SP','SP',],
